[gd_scene load_steps=29 format=3 uid="uid://db8yvsk101qs8"]

[ext_resource type="Script" path="res://scripts/GameManager.gd" id="1_8qb87"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_mjbkh"]
[ext_resource type="PackedScene" uid="uid://bed2yj8fvf1mj" path="res://scenes/plaform.tscn" id="3_88n13"]
[ext_resource type="PackedScene" uid="uid://c74ic2qpycxyk" path="res://scenes/coin.tscn" id="4_xjcvn"]
[ext_resource type="PackedScene" uid="uid://dfc2fk70lgq4s" path="res://scenes/killzone.tscn" id="5_htish"]
[ext_resource type="FontFile" uid="uid://djj4frks4cir5" path="res://assets/fonts/PixelOperator8.ttf" id="7_oxmku"]
[ext_resource type="Script" path="res://scripts/Enemies.gd" id="7_vtueq"]
[ext_resource type="PackedScene" uid="uid://b8f8qfugf6orn" path="res://scenes/tile_map_2.tscn" id="9_7kioj"]
[ext_resource type="PackedScene" uid="uid://de13lkykty72u" path="res://scenes/troll.tscn" id="9_k8bjk"]
[ext_resource type="Script" path="res://scripts/UIManager.gd" id="10_b8mil"]
[ext_resource type="Texture2D" uid="uid://crkijkyvkebl2" path="res://assets/sprites/coin.png" id="10_uiv13"]
[ext_resource type="PackedScene" uid="uid://byt8u251nljr1" path="res://scenes/player.tscn" id="14_c3ufh"]
[ext_resource type="Script" path="res://scripts/finish_line.gd" id="14_y66wd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wxnlr"]
atlas = ExtResource("10_uiv13")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_07nus"]
atlas = ExtResource("10_uiv13")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4k3vr"]
atlas = ExtResource("10_uiv13")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebjs4"]
atlas = ExtResource("10_uiv13")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qlag"]
atlas = ExtResource("10_uiv13")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_00ago"]
atlas = ExtResource("10_uiv13")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5546"]
atlas = ExtResource("10_uiv13")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bkfg"]
atlas = ExtResource("10_uiv13")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0qct"]
atlas = ExtResource("10_uiv13")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_of7hc"]
atlas = ExtResource("10_uiv13")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbgft"]
atlas = ExtResource("10_uiv13")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8xws"]
atlas = ExtResource("10_uiv13")
region = Rect2(176, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_irdvv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxnlr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07nus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k3vr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebjs4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qlag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00ago")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5546")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bkfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0qct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_of7hc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbgft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8xws")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_utcfl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yxdy2"]
size = Vector2(21, 28)

[node name="Game" type="Node2D"]
script = ExtResource("1_mjbkh")

[node name="SelectPlayers" type="Node" parent="."]

[node name="UIManager" type="CanvasLayer" parent="."]
script = ExtResource("10_b8mil")

[node name="CoinIcon" type="TextureRect" parent="UIManager"]
offset_left = 9.0
offset_top = 10.0
offset_right = 49.0
offset_bottom = 50.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UIManager/CoinIcon"]
sprite_frames = SubResource("SpriteFrames_irdvv")
frame = 5
frame_progress = 0.529816

[node name="CoinDisplay" type="Label" parent="UIManager"]
offset_left = 16.0
offset_top = -4.0
offset_right = 56.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "0"

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_8qb87")
metadata/gained_coins = 0

[node name="ScoreLabel" type="Label" parent="GameManager"]
offset_left = 167.0
offset_top = 171.0
offset_right = 277.0
offset_bottom = 194.0
theme_override_fonts/font = ExtResource("7_oxmku")
theme_override_font_sizes/font_size = 8
text = "Space to jump"

[node name="Enemies" type="Node" parent="."]
script = ExtResource("7_vtueq")
troll_scene = ExtResource("9_k8bjk")
aliance_scene = ExtResource("9_k8bjk")
max_trolls = 9000
max_neutrals = 9000
max_aliance = 9000
spawn_speller = 5
spawn_interval = 30.0

[node name="TrollSpawnPoints" type="Node2D" parent="Enemies"]
position = Vector2(671, 119)

[node name="Node2D" type="Node2D" parent="Enemies/TrollSpawnPoints"]

[node name="AlianceSpawnPoints" type="Node2D" parent="Enemies"]
position = Vector2(-1455, 83)

[node name="Node2D" type="Node2D" parent="Enemies/AlianceSpawnPoints"]

[node name="NeutralSpawnPoints" type="Node2D" parent="Enemies"]
position = Vector2(-543, -37)

[node name="Node2D" type="Node2D" parent="Enemies/NeutralSpawnPoints"]

[node name="Towers" type="Node" parent="."]

[node name="TileMap2" parent="." instance=ExtResource("9_7kioj")]

[node name="Killzone" parent="." instance=ExtResource("5_htish")]
position = Vector2(100, 384)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
shape = SubResource("WorldBoundaryShape2D_utcfl")

[node name="Coins" type="Node" parent="."]

[node name="Coin" parent="Coins" instance=ExtResource("4_xjcvn")]
position = Vector2(143, 183)

[node name="Coin7" parent="Coins" instance=ExtResource("4_xjcvn")]
position = Vector2(160, 183)

[node name="Coin8" parent="Coins" instance=ExtResource("4_xjcvn")]
position = Vector2(178, 183)

[node name="Coin9" parent="Coins" instance=ExtResource("4_xjcvn")]
position = Vector2(197, 183)

[node name="Coin10" parent="Coins" instance=ExtResource("4_xjcvn")]
position = Vector2(215, 183)

[node name="Coin11" parent="Coins" instance=ExtResource("4_xjcvn")]
position = Vector2(-1462, 166)

[node name="Coin12" parent="Coins" instance=ExtResource("4_xjcvn")]
position = Vector2(-1446, 149)

[node name="Coin13" parent="Coins" instance=ExtResource("4_xjcvn")]
position = Vector2(-1430, 133)

[node name="Coin2" parent="Coins" instance=ExtResource("4_xjcvn")]
position = Vector2(375, 152)

[node name="Coin3" parent="Coins" instance=ExtResource("4_xjcvn")]
position = Vector2(460, 151)

[node name="Coin4" parent="Coins" instance=ExtResource("4_xjcvn")]
position = Vector2(441, 139)

[node name="Coin5" parent="Coins" instance=ExtResource("4_xjcvn")]
position = Vector2(395, 140)

[node name="Coin6" parent="Coins" instance=ExtResource("4_xjcvn")]
position = Vector2(417, 131)

[node name="Platforms" type="Node" parent="."]

[node name="Plaform" parent="Platforms" instance=ExtResource("3_88n13")]
position = Vector2(-387, -44)

[node name="Labels" type="Node" parent="."]

[node name="Label" type="Label" parent="Labels"]
offset_left = -34.0
offset_top = -43.0
offset_right = 76.0
offset_bottom = -20.0
theme_override_fonts/font = ExtResource("7_oxmku")
theme_override_font_sizes/font_size = 8
text = "Space to jump"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/multi_player_play.tscn")
spawn_path = NodePath("../Players")
spawn_limit = 2

[node name="FinishLine" type="Area2D" parent="."]
position = Vector2(-1624, 124)
collision_mask = 2
script = ExtResource("14_y66wd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FinishLine"]
position = Vector2(5, 5)
shape = SubResource("RectangleShape2D_yxdy2")

[node name="FinishLine2" type="Area2D" parent="."]
position = Vector2(790, 145)
script = ExtResource("14_y66wd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FinishLine2"]
position = Vector2(2, -2)
shape = SubResource("RectangleShape2D_yxdy2")

[node name="Players" type="Node2D" parent="."]
position = Vector2(-387, -79)

[node name="MultiplayerHUD" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 584.0
offset_top = 108.0
offset_right = 624.0
offset_bottom = 148.0

[node name="Panel" type="Panel" parent="MultiplayerHUD"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerHUD/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HostGame" type="Button" parent="MultiplayerHUD/Panel/VBoxContainer"]
layout_mode = 2
text = "CRIAR"

[node name="JoinAsPlayer2" type="Button" parent="MultiplayerHUD/Panel/VBoxContainer"]
layout_mode = 2
text = "ENTRAR NO JOGO"

[node name="Player" parent="." instance=ExtResource("14_c3ufh")]
position = Vector2(-411, -110)
respawn_position = Vector2(-1455, 83)

[connection signal="pressed" from="MultiplayerHUD/Panel/VBoxContainer/HostGame" to="GameManager" method="_on_host_game_pressed"]
[connection signal="pressed" from="MultiplayerHUD/Panel/VBoxContainer/JoinAsPlayer2" to="GameManager" method="_on_join_as_player_2_pressed"]
